--- a/imports/ui/components/language-selection/language-selection.html
+++ b/imports/ui/components/language-selection/language-selection.html
@@ -18,6 +18,12 @@
 		</span>
 		<ul class="dropdown-menu" role="menu">
 			{{#if languages}}
+				<li class="dropdown-header dropdown-legend">
+					<span class="dropdown-addon-right">
+						{{mf 'languageSelection.legend.percTranslated' '% translated'}}
+					</span>
+					{{mf 'languageSelection.legend.language' 'Language'}}
+				</li>
 				{{#each languages}}
 					<li>
 						<a href="#" class="js-language-link js-nav-dropdown-close" title="{{english}}">
