remove path logic from featuredGroup template
also show banner once group is loaded and not before. Fixes #1201.

--- a/imports/ui/components/featured-group/featured-group.html
+++ b/imports/ui/components/featured-group/featured-group.html
@@ -1,5 +1,5 @@
 <template name="featuredGroup">
-	{{#if showFeaturedGroup}}
+	{{#if featuredGroup}}
 		<div class="container">
 			<div class="featured-group">
 				<div class="featured-group-header">
