--- a/imports/ui/layouts/app-body.html
+++ b/imports/ui/layouts/app-body.html
@@ -8,7 +8,7 @@
 			{{> navbar}}
 		</div>
 		<div id="outer" class="{{#if testWarning}}test-warning{{/if}}">
-			{{> featuredGroup}}
+			{{> yield region='aboveContent'}}
 
 			{{#if shownIntro}}
 				{{> introduction}}
