--- a/imports/ui/components/courses/edit/course-edit.html
+++ b/imports/ui/components/courses/edit/course-edit.html
@@ -120,7 +120,7 @@
 									<span class="fa fa-dot-circle-o fa-fw" aria-hidden="true"></span>
 								</div>
 								<select class="region_select form-control" name='region'>
-									<option value='' disabled selected class="select_placeholder">
+									<option value='' disabled selected class="select-placeholder">
 										{{mf '_selection.pleaseSelect'}}
 									</option>
 									{{#each regions}}
