--- a/imports/ui/components/courses/members/course-members.html
+++ b/imports/ui/components/courses/members/course-members.html
@@ -10,7 +10,7 @@
 				}
 			{{/mf}}
 			{{#if canNotifyAll}}
-				<i class="fa fa-envelope" id="contactMembers"></i>
+				<i class="fa fa-envelope contact-members" id="contactMembers"></i>
 			{{/if}}
 		</h4>
 	</div>
