--- a/imports/ui/components/events/edit/event-edit.html
+++ b/imports/ui/components/events/edit/event-edit.html
@@ -113,7 +113,7 @@
 						</div>
 						<select class="region_select js-select-region form-control"
 							name='region'>
-							<option class="select_placeholder"
+							<option class="select-placeholder"
 							        disabled
 							        selected
 							        value=''>
