--- a/imports/ui/components/regions/tag/region-tag.scss
+++ b/imports/ui/components/regions/tag/region-tag.scss
@@ -1,12 +1,12 @@
 // *** Region Tag ***
 //=======================
 .region-tag {
-	background-color: rgba($blue, 0.75);
+	@include td-pos(right, 0);
+	background-color: rgba($blue, .75);
 	border-bottom-left-radius: 3px;
 	color: $white;
 	padding: 8px;
 	position: absolute;
-	@include td-pos(right, 0);
 	top: 0;
 }
 
