--- a/imports/ui/components/translate-info/translate-info.scss
+++ b/imports/ui/components/translate-info/translate-info.scss
@@ -1,23 +1,28 @@
+// sass-lint:disable class-name-format, no-ids, no-qualifying-elements
+
 .translate-info {
 	background-color: $gray-lightest;
 	padding: 15px;
 }
-.translate-info h2{
+
+.translate-info h2 {
 	border-bottom: 1px solid $gray-lighter;
 	color: $blue;
-	margin: 10px 0px;
+	margin: 10px 0;
 }
+
 .translate-info ul {
 	@include list-unstyled;
 }
+
 .translate-info li {
-	background-color: $white;
-	margin: 5px;
-	padding: 2px 5px;
 	@include td-margin(left, 15px);
-	border-width: 1px;
+	background-color: $white;
 	border-color: $gray-lighter;
 	border-style: solid;
+	border-width: 1px;
+	margin: 5px;
+	padding: 2px 5px;
 }
 
 #mfTransContainer {
@@ -58,7 +63,7 @@ $translate-trans: $green-dark;
 table.mfTrans th:nth-child(2),
 table.mfTrans th:nth-child(3) {
 	background-color: lighten($translate-trans, 25%);
-	color: black;
+	color: $black;
 }
 
 $translate-fuzzy: $yellow;
@@ -66,7 +71,7 @@ $translate-fuzzy: $yellow;
 table.mfTrans th:nth-child(4),
 table.mfTrans th:nth-child(5) {
 	background-color: lighten($translate-fuzzy, 25%);
-	color: black;
+	color: $black;
 }
 
 $translate-untrans: $red-dark;
@@ -74,7 +79,7 @@ $translate-untrans: $red-dark;
 table.mfTrans th:nth-child(6),
 table.mfTrans th:nth-child(7) {
 	background-color: lighten($translate-untrans, 25%);
-	color: black;
+	color: $black;
 }
 
 table.mfTrans th:last-child {
@@ -120,8 +125,8 @@ div.mfTransGraph {
 
 #mfTransNewText,
 #mfTransNewSubmit {
-	display: inline-block;
 	@include td-margin(left, 5px);
+	display: inline-block;
 }
 
 #mfTransNewText {
