--- a/imports/ui/pages/timetable/timetable.scss
+++ b/imports/ui/pages/timetable/timetable.scss
@@ -15,20 +15,20 @@
 }
 
 .timetable-day {
-	height: 2em;
-	margin-bottom: 2px;
 	border: solid;
 	border-color: #f5f5f5;
 	border-width: 3px 0 0 .5px;
+	height: 2em;
+	margin-bottom: 2px;
 	position: absolute;
 	text-align: center;
 }
 
 .timetable-hour {
-	height: 10000px;
 	border: solid;
 	border-color: #f5f5f5;
 	border-width: 3px 0 0 .5px;
+	height: 10000px;
 	position: absolute;
 	text-align: center;
 }
@@ -45,15 +45,15 @@
 
 .timetable-location {
 	@include td-pos(left, -1em);
+	@include td-text-align(left);
 	padding: 0 1em;
 	position: absolute;
-	@include td-text-align(left);
 	width: 12em;
 }
 
 .timetable-row-section {
-	height: 45px;
 	@include td-margin(left, 12em);
+	height: 45px;
 	position: relative;
 
 	&:hover {
@@ -62,7 +62,7 @@
 }
 
 .timetable-event {
-	color: black;
+	color: $black;
 	margin: .1em;
 	position: absolute;
 
