--- a/imports/ui/stylesheets/mocha.scss
+++ b/imports/ui/stylesheets/mocha.scss
@@ -1,7 +1,9 @@
-/* This formats the mocha test-result output */
-div#mocha {
-  background: white;
-  border-right: 2px solid black;
+// sass-lint:disable no-ids
+
+// This formats the mocha test-result output
+#mocha {
+  background: $white;
+  border-right: 2px solid $black;
   height: 100%;
   left: 0;
   margin: 0;
