quotes strings bold in alert messages

--- a/imports/ui/components/messages/messages.html
+++ b/imports/ui/components/messages/messages.html
@@ -9,7 +9,7 @@
 
 <template name="message">
 	<div class="alert alert-{{type}} alert-dismissible message" role="alert">
-		{{message}}
+		{{highlightedMessage}}
 		<button
 			aria-label="{{mf 'message.close' 'Close message'}}"
 			class="close js-remove-message"
