region._id might not be a plain string
this happens when a region is created in Mongo directly

--- a/imports/ui/components/courses/edit/course-edit.html
+++ b/imports/ui/components/courses/edit/course-edit.html
@@ -123,9 +123,9 @@
 									<option value='' disabled selected class="select-placeholder">
 										{{mf '_selection.pleaseSelect'}}
 									</option>
-									{{#each regions}}
-										<option value='{{_id}}' selected="{{#if currentRegion this}}selected{{/if}}">
-											{{name}}
+									{{#each region in regions}}
+										<option value='{{region._id}}' selected="{{#if currentRegion region}}selected{{/if}}">
+											{{region.name}}
 										</option>
 									{{/each}}
 								</select>
